<resources xmlns:xliff="rn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Tourist Quiz</string>

    <!-- Golden Gate question texts -->
    <string name="golden_gate_question">Why is the Golden Gate Bridge called golden?</string>
    <string name="golden_gate_strait">Because it straddles the Golden Gate Strait waterway</string>
    <string name="golden_gate_color">Because of its paint color</string>
    <string name="golden_gate_parts">Because it has golden parts inside its structure</string>
    <string name="golden_gate_decoration">Because it has golden decoration elements on it</string>

    <!-- London tower texts -->
    <string name="london_tower_question">How is the tower in London’s Houses of Parliament
        called?</string>
    <string name="london_hint_text">Enter the name of the tower here</string>
    <string name="london_right_answer" translatable="false">Clock Tower</string>

    <!-- Beach question texts -->
    <string name="beach_question">Which country has the most beaches in the world?</string>
    <string name="beach_australia">Australia</string>
    <string name="beach_brazil">Brazil</string>
    <string name="beach_usa">United States of America</string>
    <string name="beach_india">India</string>

    <!-- Statue of Liberty question texts -->
    <string name="statue_of_liberty_question">Mark the true statements about the
        Statue of Liberty!</string>
    <string name="statue_of_liberty_french_sculptor">It was built by French sculptor</string>
    <string name="statue_of_liberty_completion_time">It took nine years to complete</string>
    <string name="statue_of_liberty_number_of_pieces">It was shipped via boat in 350
        individual pieces</string>
    <string name="statue_of_liberty_weight">It weights more than a Boeing 747 aircraft</string>

    <!-- Eiffel Tower question texts -->
    <string name="eiffel_tower_question">For how many people does the Eiffel Tower serve as their
        daily workplace?</string>
    <string name="eiffel_tower_6" translatable="false">6</string>
    <string name="eiffel_tower_60" translatable="false">60</string>
    <string name="eiffel_tower_600" translatable="false">600</string>
    <string name="eiffel_tower_6000" translatable="false">6000</string>

    <!-- Great Wall question texts -->
    <string name="great_wall_question">Is the Great Wall of China visible from the Moon?</string>
    <string name="great_wall_yes">Yes</string>
    <string name="great_wall_no">No</string>

    <!-- Amusement park question texts -->
    <string name="amusement_park_question">Which amusement park has the most visitors a year?</string>
    <string name="amusement_park_florida" translatable="false">Magic Kingdom at
        Walt Disney World Resort - Florida, United States</string>
    <string name="amusement_park_california" translatable="false">Disneyland Park at
        Disneyland Resort - Califronia, United States</string>
    <string name="amusement_park_paris" translatable="false">Disneyland Park at
        Disneyland - Paris, France</string>
    <string name="amusement_park_tokyo" translatable="false">Tokyo Disneyland at
        Tokyo Disney Resort - Tokyo, Japan</string>

    <!-- Button string -->
    <string name="submit_answers">Submit Answers</string>
    <string name="show_right_answers">Show Answers</string>
    <string name="restart">Restart</string>

    <!-- Result texts -->
    <string name="result_toast_text_0">You achieved <xliff:g>%d</xliff:g> points out of 7.
        \nTry again!</string>
    <string name="result_toast_text_1">You achieved <xliff:g>%d</xliff:g> point out of 7.
        \nDon\'t be sad! It was difficult.</string>
    <string name="result_toast_text_above_1">You achieved <xliff:g>%d</xliff:g> points out of 7.
        Not bad!</string>
    <string name="result_toast_text_above_3">You achieved <xliff:g>%d</xliff:g> points out of 7.
        \nYou have a great knowledge of attractions!</string>
    <string name="result_toast_text_7">You achieved <xliff:g>%d</xliff:g> points out of 7.
        \nCongrats, you are a real World Traveller!</string>
</resources>
